--- a/src/styles/product-display.css
+++ b/src/styles/product-display.css
@@ -2,11 +2,13 @@
     width: 100%;
 }
 #card{
-    width: 32%;
-    height: 48rem;
+    width: 100%;
+    /* height: 45rem; */
+    margin: 1rem;
 }
 .card-body{
     position: relative;
+    ;
 }
 #btn {
     position: absolute;
